Corrected Responsiveness & Overflow Problems, changed membership names

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,8 +3,6 @@
                         /*------------------------*/
                         
                         * {
-                            margin: 0;
-                            padding: 0;
                             box-sizing: border-box;
                         }
                         
@@ -152,7 +150,6 @@
                             margin-top: -30px;
                             margin-left: -20px;
                             text-align: left;
-                            margin-left
                         }
                         /*------------------------*/
                         /*CAROUSEL*/
@@ -252,7 +249,7 @@
                         
                         .membership-box {
                             padding-top: 20px;
-                            margin: 20px 0;
+                            margin: 20px 10px;
                             color: #fff;
                             background: #101110e5;
                             border-radius: 20px;
@@ -618,6 +615,9 @@
                                 font-size: 80%;
                                 max-width: 40ch;
                             }
+                            .membership-box {
+                                margin: 20px 100px;
+                            }
                         }
                         /*Small phones - from 0 to 480 px  */
                         
@@ -635,5 +635,8 @@
                             }
                             .faqsanswer p {
                                 font-size: 70%;
+                            }
+                            .membership-box {
+                                margin: 5px 5px;
                             }
                         }
